bynkc/tests/fixtures/positive/249_history_provides/src/demo/wallet.bynk
context demo.wallet

type Amount = Int where Positive

capability Ledger {
  fn note(amount: Int) -> Effect[()]
}

provides Ledger = RealLedger {
  fn note(amount: Int) -> Effect[()] { Effect.pure(()) }
}

agent Wallet {
  key id: String
  store balance: Cell[Int] = 0
  invariant nonneg: balance >= 0

  on call topUp(amount: Amount) -> Effect[()] given Ledger {
    let _ <- Ledger.note(amount)
    balance.update((b) => b + amount)
  }
  on call spend(amount: Amount) -> Effect[()] {
    balance.update((b) => b - amount)
  }
}
