bynkc/tests/fixtures/negative/289_history_outside_property/src/demo/wallet.bynk
context demo.wallet

agent Wallet {
  key id: String
  store balance: Cell[Int] = 0
  on call topUp(amount: Int) -> Effect[()] { balance.update((b) => b + amount) }
}

-- `History[Agent]` is a test-only generator; it is not a value type.
fn peek(w: History[Wallet]) -> Int { 0 }
